service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: checkin
  name: checkin
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: checkin
  type: ClusterIP
