ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: checkin
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`checkin.livepo.top`)
      services:
        - name: checkin
          port: 8080
  tls:
    secretName: checkin-secret
